--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 	<meta charset="utf-8">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>Push The Box Unblocked</title>
+	<link rel="canonical" href="https://ubg44.github.io/PushTheBox/" />
+	<script>
+		window.location= "https://ubg44.github.io/PushTheBox/";
+	</script>
 	<script src="Build/UnityLoader.js"></script>
 	<script src="Build/cmg.js"></script>
 	<script>
